--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Git hub</title>
 </head>
 <body>
-    <h1>Hola que tal</h1>
+    <h1>Formulario</h1>
+
+    <form action="formulario.php" method="POST">
+        <input type="text" name="Nombre">
+        <input type="submit" name="Enviar">
+
+    </form>
 </body>
 </html>
