--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <form action="formulario.php" method="POST">
         <input type="text" name="Nombre">
+        <input type="text" name="Apellido">
         <input type="submit" name="Enviar">
 
     </form>
